tests/compile/command_modules/rasterization.stderr
In file included from rasterization.cpp:1:
In file included from rcgp.hpp:4:
In file included from rcgp-meta.hpp:9:
commands.hpp:89:17: error: static assertion failed: command recording has unresolved dependencies
   89 |                 static_assert(false, norm.second);
      |                               ^~~~~
rasterization.cpp:168:3: note: in instantiation of function template specialization 'rcgp::operator|<rcgp::ActivatePipeline<rcgp::PipelineKind::eRasterization>, rcgp::NormalEntry<norm_entry{{4, nullptr, 0}, 3, {{0, 0}, {0, 0}}}>, rcgp::NormalEntry<norm_entry{{1, &material, 0}, 1, {{0, 0}, {0, 0}}}>, rcgp::TerminalSentinel<rcgp::PipelineKind::eRasterization>>' requested here
  168 |                 | draw(3);
      |                 ^
In file included from rasterization.cpp:1:
In file included from rcgp.hpp:4:
In file included from rcgp-meta.hpp:9:
commands.hpp:89:17: error: static assertion failed: command recording has unresolved dependencies
   89 |                 static_assert(false, norm.second);
      |                               ^~~~~
rasterization.cpp:202:3: note: in instantiation of function template specialization 'rcgp::operator|<rcgp::ActivatePipeline<rcgp::PipelineKind::eRasterization>, rcgp::NormalEntry<norm_entry{{4, nullptr, 0}, 3, {{0, 0}, {0, 0}}}>, rcgp::DependencyEnforcerForIndexBuffer, rcgp::TerminalSentinel<rcgp::PipelineKind::eRasterization>>' requested here
  202 |                 | draw_indexed(36);
      |                 ^
2 errors generated.
